# plain-flags

./: .gitignore  LICENSE  README.md  clean-data.sh  deploy.sh.template  deploy_go.sh  deploy_python.sh  dev.sh  docker-compose-hub-pg.yml  docker-compose-hub-sqlite.yml  docker-compose-local-pg.yml  docker-compose-local-sqlite.yml  docker-compose-local.yml  docker-compose-pg.yml  docker-compose.yml  test.sh  version.sh  version_gcp.sh  wait.sh
.github/ISSUE_TEMPLATE/: bug_report.md
conf.d/: plain-flags.conf
dashboard/: .env.template  Dockerfile  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: app.css  root.tsx  routes.ts
gcp/: README.md  docker-compose-gcp-local.yml  test-service.sh
gcp/infrastructure/: cleanup-billing-resources.sh  cleanup.sh  delete-cloud-test.sh  delete-dashboard.sh  delete-flag-states.sh  deploy-billing-resources.sh  deploy-cloud-test.sh  deploy-dashboard.sh  deploy-database.sh  deploy-flag-management.sh  deploy-flag-states.sh  down.sh  instance-config.template  setup-firebase-app.sh  setup-firebase-auth.sh  setup-firebase.sh  setup-project.sh  up-dev.sh  up-prod.sh
nginx/: nginx.conf
plainflags_app/: README.md  firebase.json  flutter_launcher_icons.yaml  pubspec.yaml
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/plain-flags-python-sdk/: plainflags.py
sdk/python/python/: __init__.py  constrainer.py  flagstate.py  plainflags.py
service/: package-lock.json  package.json  plain-flags.sqlite
service-tests/: .env.template  package-lock.json  package.json  populate.sh  stress.sh  tsconfig.json
(+471 files in other folders)
